# pypelines

./: .coverage  .gitignore  .gitlab-ci.yml  .pdm-python  .setup.py  404.html  README.md  auto_increment_version.py  coverage.xml  index.html  pyproject.toml  requirements-celery.txt  run_tests.py  setup.py  sitemap.xml
.github/workflows/: docs.yml  test.yml
docs/: mkdocs.yml
docs/documentation/: index.md
docs/documentation/.assets/: PypelinesGenerate.drawio
docs/documentation/stylesheets/: extra.css
notebooks/: Example.ipynb  feature_test.ipynb
pypelines/: __init__.py  accessors.py  arguments.py  disk.py  examples.py  feature_test.ipynb  loggs.py  multisession.py  pickle_backend.py  pipe.py  pipeline.py  pipelines.py  pipes.py  sessions.py  step.py  steps.py  tasks.py  versions.py
pypelines.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pypelines/: __init__.py  celery_tasks.py  feature_test.ipynb  loggs.py  pipelines.py  pipes.py  steps.py  utils.py
tests/: instances.py  test_core.py  tests.py
